update formatting, content (very much n progress)

--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -65,10 +65,8 @@ A good place to look for additional information on MoinMoin wiki markup is  [htt
 <span id="spacing"></span>
 === Spacing ===
 Both vertical and horizontal spacing can be rendered differently depending upon the combination of formatting markup that is used.  If your formatting is not working out the way you want check the notes below on other formatting that you have used nearby that may be affecting how the local formatting is interpreted.
- ''Example'': If you try to pick up a numbered list down the page after placing unnumbered lines at the same indent level, the next number in the numbered list will still count the unnumbered lines.  
-: See sections below for notes on known interference between markup.
-: <<Color2(red,''Important!'')>> Using a hard return (Enter key) at the end of a line is often '''not''' parsed as a line break.  To end a line and begin another either press the Enter key ''twice'' to put a space between paragraphs, or use a [[#break|Hard Line Break]] as described below.  
-: ''Note'': Indenting can affect vertical spacing.  See ''[[#vertical|Note]]'' below for details.
+ ''Example'': If you try to pick up a numbered list down the page after using unnumbered lines at the same indent level, the next number in the numbered list will count the unnumbered lines.
+: See [[#problems1|Some Known Problems and Solutions]] below for notes on known interference between markup.
 
 <span id="indent"></span>
 ==== Indenting ====
@@ -87,14 +85,15 @@ Both vertical and horizontal spacing can be rendered differently depending upon 
 ==== Hard Line Break ====
  ''Markup'': ```<br/>```
 * Place the above markup wherever you want to force the following text onto the next line but keep it in the same paragraph.<br/>
-* ''Note'': You cannot change indent level immediately following a hard line break.  (Seems like a hard break forces the next line into the same paragraph.)
+* ''Note'': You cannot change indent level immediately following a hard line break.  (The next line is still part of the same paragraph.)
 : ''Example'': Typing the following in the text editor ```
   1 first line<<BR>>  2 this line typed on same line after hard line break markup, same indent<<BR>>   3 this line typed on same line after hard line break markup, +1 indent<<BR>>  4 this line typed on same line after hard line break markup, -1 indent<<BR>>  . 5 this line typed on same line after hard line break markup, same indent with period<<BR>>6 this line typed on same line after hard line break markup without any indent
 ```
    ''generates''
 : 1 first line<br/>  2 this line typed on same line after hard line break markup, same indent<br/>   3 this line typed on same line after hard line break markup, +1 indent<br/>  4 this line typed on same line after hard line break markup, -1 indent<br/>  . 5 this line typed on same line after hard line break markup, same indent with period<br/>6 this line typed on same line after hard line break markup without any indent
 
-:<span id="vertical"></span> ''Note'': Spaces between lines and paragraphs (which may be individual lines) are parsed with different spacing depending upon the context (especially relative indent level).  It may take some playing around with the markup to get the spacing you want, or it may be that you will have to accept a certain amount of pre-determined spacing between lines.
+<span id="vertical"></span>
+: ''Note'': Spaces between lines and paragraphs (which may be individual lines) are parsed with different spacing depending upon the context (especially relative indent level).  It may take some playing around with the markup to get the spacing you want, or it may be that you will have to accept a certain amount of pre-determined spacing between lines.
 : ''Example'': Typing the following in the text editor ```
  1 hard return followed by next line same indent
  2 hard return followed by next line +1 indent
@@ -113,13 +112,106 @@ Both vertical and horizontal spacing can be rendered differently depending upon 
    6 hard return after hard line break markup, followed by next line same indent<br/>
    7<br/> 8 next line typed on same line after hard line break markup, same indent
 
-* To ensure that the next line is treated as a separate line (paragraph)
+* To ensure that the next line is treated as a separate line (not necessarily a separate paragraph!)
    a. use two consecutive hard returns (```Enter key```)
-    ~-Note that this will leave a larger space between lines (usually a double-space)-~
+    ~-''Note'': this will leave a larger space between lines (usually a double-space) but it is treated as a new paragraph-~
    a. use a [[#break|hard line break]]
    a. [[#indent|indent]] more (farther right)
    a. use a [[#indent|period]] at the beginning of the line after indenting the same amount
    a. [[#indent|indent]] less (farther left)
+
+[[#ToC|Return to Table of Contents]]
+
+
+<span id="lists"></span>
+==== Lists ====
+<<Color2(red,''Important!'')>> Anything that interrupts a list, except a list item indented further right, will potentially end the list!  This may affect the indenting, count, or symbols if you try to restart the list below the interruption.  This may or may not be able to be overcome, so be careful with anything that interrupts a list!
+
+Bullet Lists
+: ''Markup'': Begin a line with a space followed by an asterisk to create a bulleted line of text (space after asterisk is optional but seems to be preferred)
+: ''Example'': ```  * First line of bullet list```<br/>
+   ''Generates'':
+* First line of bullet list<br/>
+Numbered Lists
+: ''Markup'': Begin a line with a space followed by the number 1 and a period (or choose another number format such as i or a).
+: ''Note'': Each line that should be part of the list begins with the same starting number. The wiki will generate sequential numbers in preview mode or after saving.
+: ''Example'': ```
+ 1. First line of numbered list
+ 1. Second line of numbered list
+```
+  ''Generates'':
+  1. First line of numbered list
+  1. Second line of numbered list
+
+ More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists]
+
+<span id="problems1"></span>
+==== Some Known Problems and Solutions ====
+{|
+|
+|<bgcolor="#EDEDED">''Problem Category'': Vertical spacing isn't working properly
+|-
+|<( |3 30%>''Problem'': My text is on another line in the editor but grouped with the previous line in the preview/saved version
+|''Cause'': Using a hard return (Enter key) at the end of a line is often '''not''' parsed as a line break.
+|-
+|''Solution 1'': Press the Enter key ''twice'' to put a space between paragraphs
+|-
+|''Solution 2'': Use a [[#break|Hard Line Break]].
+|-
+|<( |5 30%>''Problem'': There is too much/little space between lines of text
+|''Cause'': Most of the vertical spacing in this wiki is fixed and is determined based on other formatting choices.
+|-
+|''Solution'': You can force __additional__ space between lines of text using [[#break|Hard Line Breaks]].
+|-
+|''Note'': You '''cannot''' force __less__ space between lines of text in separate paragraphs.  The only option for keeping lines of text close together is to use [[#break|Hard Line Breaks]] to keep lines within a paragraph.<br/><<Color2(red,''Important!'')>> There are limits to how you can change formatting within a paragraph.
+|-
+|''Note'': Indenting can affect vertical spacing.  See ''[[#vertical|Note]]'' above for details.
+|}
+
+{|
+|
+|<bgcolor="#EDEDED">''Problem Category'': My list isn't working properly
+|-
+|<( |6 30%>''Problem'': The __numbering__ in my list started over
+|''Cause'': Most likely your numbering restarted because something broke the list into two parts.
+|-
+|''Solution 1'': Remove the interfering item or change it's indent to be subordinate in the list (add more spaces to indent more).
+|-
+|''Solution 2'': Try forcing a new starting number/letter.
+|-
+|''Markup'': place a <code>#value</code>, where # is the symbol and <code>value</code> is a number like 2, 3, 4... ('''not''' the character you want), immediately after the starting numbering markup.
+|-
+|''Example'': ``` 1.#4 text``` should force the list item to begin with the number 4.<br/>{{{a.#4 text}}} should force the list item to begin with the letter d.
+|-
+|<<Color2(red,''Important!'')>> This fix does not always work!!!
+|-
+|<( |5 30%>''Problem'': The indenting of my next list item is wrong
+|''Cause 1'': The list is interrupted by another item (like a box of code) with __less indent__ (farther left) than the previous line of the list
+|-
+|''Result'': The interfering block forces the end of a list so the list begun after it is treated as a new list.<br/>~-(It also seems to default to a first level indent after an interruption regardless of the number of spaces you actually put in.)-~
+|-
+|''Solution'': One __possible__ workaround is to place a blank line containing a ```space period space``` ( . ) between the interfering content and the next line.<br/>~-''Note'': This seems to allow the wiki parser to interpret the indent count on the next line correctly but likely won't continue the list.  It does not always work!-~
+|-
+|''Note'': It may be necessary to indent one level ''less'' (farther left) than the line that is not being parsed correctly.  For example, if you need a line following an interruption to be at 3 indents, put the space-period-space ''fix'' immediately above it at 2 indents (ie: ```space space period space;  . ```).
+|-
+|<<Color2(red,''Important!'')>> Some list breaks cannot currently be fixed so you should be very careful when interrupting a list as it may force formatting you will not want.<br/>See [http://moinmo.in/MoinMoinBugs/MixedNumberedAndUnorderedLists?highlight=%28lists%29 Mixed Lists] for some discussion and examples of problems.<br/>~-''Note'': The contents at this link may change at any time and this link may not always be up to date.-~
+|-
+|<( |3 30%>''Cause 2'': A numbered list is interrupted by unnumbered items (like an indented line starting with a period) at the __same indent__ level
+|''Result'': A numbered list skips numbers.
+|-
+|''Solution 1'': Put an extra space (Enter key) between list items and then force a number (or other sequential) value by adding #<code>value</code> immediately after the numbering markup, where 'value' is the number (or letter, etc.) that you would like to be in that location.
+|-
+|''Example'': See the Basic Format section of [http://wiki.libsdl.org/moin.cgi/SGTutorials#Basic_Format SGTutorials] then go into edit mode to see the markup.
+|}
+
+
+
+
+
+* A numbered list may require that the correct start number be manually entered, however this may not always work.  See [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists] for details on forcing a start number/letter.
+* For more information about this 'bug' and another possible workaround see [http://moinmo.in/MoinMoinBugs/BlockElementsInListBreakIndent BlockElementsInListBreakIndent].
+{i} A related issue is trying to use a mixed list where bullets follow numbers on the same indent level.  This will likely parse as the next consecutive number regardless of your use of an asterisk to indicate the use of a bullet.  The same workaround seems to resolve this issue as well.
+* For more information about this 'bug' and another possible workaround see [http://moinmo.in/MoinMoinBugs/MixedNumberedAndUnorderedLists MixedNumberedAndUnorderedLists].
 
 [[#ToC|Return to Table of Contents]]
 
@@ -222,36 +314,6 @@ Verbatim text as it should be typed, or appear as code or with markup. This will
 
 [[#ToC|Return to Table of Contents]]
 
-
-<span id="lists"></span>
-=== Lists ===
- Bullet Lists
-* Begin a line with a space followed by an asterisk to create a bulleted line of text (space after asterisk is optional but seems to be preferred)
-  ''Example'': ```   * First line of bullet list```<br/>
-    ''Generates'':
-* First line of bullet list<br/>
- Numbered Lists
-* Begin a line with a space followed by the number 1 and a period (or the beginning of another number format such as i or a).  
-   Note: Each line that should be part of the list begins with the same starting number. The wiki will generate sequential numbers in preview mode or after saving.
-: ''Example'': ```
-  1. First line of numbered list
-  1. Second line of numbered list
-```
-  ''Generates'':
-  1. First line of numbered list
-  1. Second line of numbered list
-
- More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists]
-
-{i} If a list is interrupted by another item (like a box of code) with less indent (farther left) than the previous line of the list, it may interfere with the correct parsing of the next line of the list after the interruption.  (It seems to default to a first level indent after an interruption.)
-* One possible workaround is to place a blank line containing a ```space period space``` ( . ) between the interfering content and the next line.  (See [[#example|below]] for an example. In edit mode look for {{{<span id="example"></span>}}}.)  This seems to allow the wiki parser to interpret the indent count correctly on the next line and effectively continue the list.
-* It may be necessary to indent to one level less (farther left) than the line that is not being parsed correctly.  For example, if you need a line following an interruption to be at 3 indents, put the space-period-space immediately above it at 2 indents (ie: ```space space period space;  . ```).
-* A numbered list may require that the correct start number be manually entered, however this may not always work.  See [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists] for details on forcing a start number/letter.
-* For more information about this 'bug' and another possible workaround see [http://moinmo.in/MoinMoinBugs/BlockElementsInListBreakIndent BlockElementsInListBreakIndent].
-{i} A related issue is trying to use a mixed list where bullets follow numbers on the same indent level.  This will likely parse as the next consecutive number regardless of your use of an asterisk to indicate the use of a bullet.  The same workaround seems to resolve this issue as well.
-* For more information about this 'bug' and another possible workaround see [http://moinmo.in/MoinMoinBugs/MixedNumberedAndUnorderedLists MixedNumberedAndUnorderedLists].
-
-[[#ToC|Return to Table of Contents]]
 
 
 <span id="tables"></span>
