--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -9,7 +9,6 @@ Use this function to lock a portion of the texture for pixel access.
 ```c++
 int SDL_LockTexture(SDL_Texture*    texture,
                     const SDL_Rect* rect,
-                    int             markDirty,
                     void**          pixels,
                     int*            pitch)
 ```
@@ -22,9 +21,6 @@ int SDL_LockTexture(SDL_Texture*    texture,
 |'''rect'''
 |an [[SDL_Rect]] structure representing the area to lock for access; NULL to lock the entire texture
 |-
-|'''markDirty'''
-|if this is non-zero the locked area will be marked dirty when the texture is unlocked
-|-
 |'''pixels'''
 |this is filled in with a pointer to the locked pixels, appropriately offset by the locked area
 |-
@@ -33,7 +29,7 @@ int SDL_LockTexture(SDL_Texture*    texture,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code if the texture is not valid or was created with SDL_TEXTUREACCESS_STATIC; call [[SDL_GetError]]() for more information.
+Returns 0 on success, or a negative error code if the texture is not valid or was not created with SDL_TEXTUREACCESS_STATIC; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -44,7 +40,6 @@ You can add your code example here
 If you don't want to mark the entire area dirty you can pass 0 for '''markDirty''' and then use [[SDL_DirtyTexture]]() to mark specific subareas dirty.
 
 == Related Functions ==
-:[[SDL_DirtyTexture]]
 :[[SDL_UnlockTexture]]
 
 ----
