camelcase pragma change

--- a/SDL_FillRect.mediawiki
+++ b/SDL_FillRect.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_FillRect =
 Use this function to perform a fast fill of a rectangle with a specific color.
