--- a/SDL_Surface.mediawiki
+++ b/SDL_Surface.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_Surface =
 A structure that contains a collection of pixels used in software blitting.
@@ -66,23 +66,9 @@ You can add your code example here
 With most surfaces you can access the pixels directly.  Surfaces that have been optimized with [[SDL_SetSurfaceRLE]]() should be locked with [[SDL_LockSurface]]() before accessing '''pixels'''.  When you are done you should call [[SDL_UnlockSurface]]() before blitting.
 
 == Related Functions ==
-: [[SDL_BlendFillRect]]
-: [[SDL_BlendFillRects]]
-: [[SDL_BlendLine]]
-: [[SDL_BlendLines]]
-: [[SDL_BlendPoint]]
-: [[SDL_BlendPoints]]
-: [[SDL_BlendRect]]
-: [[SDL_BlendRects]]
 : [[SDL_ConvertSurface]]
 : [[SDL_CreateRGBSurface]]
 : [[SDL_CreateRGBSurfaceFrom]]
-: [[SDL_DrawLine]]
-: [[SDL_DrawLines]]
-: [[SDL_DrawPoint]]
-: [[SDL_DrawPoints]]
-: [[SDL_DrawRect]]
-: [[SDL_DrawRects]]
 : [[SDL_FillRect]]
 : [[SDL_FillRects]]
 : [[SDL_FreeSurface]]
