--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -37,6 +37,7 @@ You can add your code example here
 <<Include(SDL_RendererFlags, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
+:[[SDL_CreateSoftwareRenderer]]
 :[[SDL_DestroyRenderer]]
 :[[SDL_GetNumRenderDrivers]]
 :[[SDL_GetRendererInfo]]
