update content - w/ Sam

--- a/CategoryHints.mediawiki
+++ b/CategoryHints.mediawiki
@@ -17,13 +17,13 @@ The convention for naming hints is SDL_HINT_X, where "SDL_X" is the environment 
 In general these hints are just that - they may or may not be supported or applicable on any given platform, but they provide a way for an application or user to give the library a hint as to how they would like the library to work.
 
 
+== Variables ==
+
+<<FullSearch(category:CategoryVariable CategoryHints)>>
+
 == Enumerations ==
 
 <<FullSearch(category:CategoryEnum CategoryHints)>>
-
-== Structures ==
-
-<<FullSearch(category:CategoryStruct CategoryHints)>>
 
 == Functions ==
 
