update content - w/ Sam

--- a/CategoryHints.mediawiki
+++ b/CategoryHints.mediawiki
@@ -17,9 +17,9 @@ The convention for naming hints is SDL_HINT_X, where "SDL_X" is the environment 
 In general these hints are just that - they may or may not be supported or applicable on any given platform, but they provide a way for an application or user to give the library a hint as to how they would like the library to work.
 
 
-== Variables ==
+== Hints ==
 
-<<FullSearch(category:CategoryVariable CategoryHints)>>
+<<FullSearch(category:CategoryDefines CategoryHints)>>
 
 == Enumerations ==
 
