--- a/SDL_CondWaitTimeout.mediawiki
+++ b/SDL_CondWaitTimeout.mediawiki
@@ -1,11 +1,12 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_CondWaitTimeout =
-Use this function to ^wait on a condition variable for a fixed delay^ ''-or-'' *with timeout*.
-
-<<Color2(green,The description in the header is too long and too detailed.  Tried to write a simple summary.  Should it be the longer description here instead?<br/>Waits for at most '''ms''' milliseconds and returns 0 if the condition variable is signaled SDL_MUTEX_TIMEDOUT if the condition is not signaled in the allotted time and -1 on error. (with appropriate commas that don't work in green))>>
+Use this function to coordinate threads in a multi-threaded environment. This function will wait for the condition variable to be signaled for the number of milliseconds passed in. If the time length requested elapses prior to the condition being signaled, this function returns with a SDL_MUTEX_TIMEDOUT value, otherwise it returns '0' meaning that the condition has been signaled. Thus function also unlocks the passed in mutex prior to waiting on the condition signal, and locks the mutex upon the condition being signaled, or the timeout.
 
 
 == Syntax ==
@@ -14,18 +15,18 @@ int SDL_CondWaitTimeout(SDL_cond*  cond,
                         SDL_mutex* mutex,
                         Uint32     ms)
 ```
-
 == Function Parameters ==
 {|
-|'''cond'''
-|^the applicable condition variable^ ???
+|'''cond''' 
+|^The condition pointer whose signal will be waited on. ^ 
 |-
-|'''mutex'''
-|^a pointer to the mutex to be timed out^ ???
+|'''mutex''' 
+|^Mutex pointer used by user code to gate thread access. ^ 
 |-
-|'''ms'''
-|^the maximum number of milliseconds to wait^
+|'''ms''' 
+|^The maximum time to wait in milliseconds. Set to SDL_MUTEX_MAXWAIT for infinite wait. ^ 
 |}
+
 
 == Return Value ==
 Returns 0 if the condition variable is signaled, SDL_MUTEX_TIMEDOUT if the condition is not signaled in the allotted time, or a negative error code on failure; call [[SDL_GetError]]() for more information.
@@ -34,16 +35,15 @@ Returns 0 if the condition variable is signaled, SDL_MUTEX_TIMEDOUT if the condi
 ```c++
 You can add your code example here
 ```
-
 == Remarks ==
-*<br/>'''mutex''' is unlocked so it must be locked when the function is called and it will ,,re-,, ^un^lock afterward.
+'''mutex''' must be locked prior to calling this function. This function unlocks '''mutex''', and it remains unlocked while this function waits for the condition signal, or the timeout to occur. In this way other threads within your program are free to make use of the shared resources while this function is in the waiting state.
 
-<<Color2(green,Is this a typo in the old wiki - ''re'' vs ''un''lock?  Does the function handle the locking/unlocking or does the programmer need to do that?)>><br/>*
+When either the condition is signaled, or the timeout occurs, this function will lock '''mutex, '''prior to returning.
 
-On some platforms this function is implemented by looping with a delay of 1 ms, and so should be avoided if possible. 
+On some platforms this function is implemented by looping with a delay of 1 ms, and so should be avoided if possible.
 
 == Related Functions ==
-:[[SDL_CondWait]] *
+: [[SDL_CondWait]] *
 
 ----
-[[CategoryAPI]], [[CategoryMutex]]
+[[CategoryAPI]], CategoryMutex
